--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
-                    <img src="../02-Homework/Assets/me.jpg" class="img-fluid float-left" alt="...">
+                    <img src="../Portfolio/Assets/me.jpg" class="img-fluid float-left" alt="...">
 
                 </div>
                 <div class="col-sm-3 col-md-5">
