--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="index.html">Home/About Me <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        <a class="nav-link" href=".portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -45,7 +45,7 @@
         <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
-                    <img src="../02-Homework/Assets/coaching.png" class="img-fluid" alt="Responsive image">            
+                    <img src="../Portfolio/Assets/coaching.png" class="img-fluid" alt="Responsive image">            
                     <div class="card-img-overlay">
                         <h5 class="card-title float text-center">Coaching</h5>
                     </div>
@@ -54,7 +54,7 @@
         <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
-                    <img src="../02-Homework/Assets/game.png" class="img-fluid" alt="Responsive image">            
+                    <img src="../Portfolio/Assets/game.png" class="img-fluid" alt="Responsive image">            
                     <div class="card-img-overlay">
                         <h5 class="card-title text-center">Gaming</h5>
                     </div>
@@ -63,7 +63,7 @@
         <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
-                    <img src="../02-Homework/Assets/download.png" class="img-fluid" alt="Responsive image">            
+                    <img src="../Portfolio/Assets/download.png" class="img-fluid" alt="Responsive image">            
                     <div class="card-img-overlay">
                         <h5 class="card-title text-center">Development</h5>
                     </div>
@@ -72,7 +72,7 @@
         <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
-                    <img src="../02-Homework/Assets/music.png" class="img-fluid" alt="Responsive image">            
+                    <img src="../Portfolio/Assets/music.png" class="img-fluid" alt="Responsive image">            
                     <div class="card-img-overlay">
                         <h5 class="card-title text-center">Music</h5>
                     </div>
@@ -81,7 +81,7 @@
         <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
-                    <img src="../02-Homework/Assets/smile.png" class="img-fluid" alt="Responsive image">            
+                    <img src="../Portfolio/Assets/smile.png" class="img-fluid" alt="Responsive image">            
                     <div class="card-img-overlay">
                         <h5 class="card-title text-center">Surprise</h5>
                     </div>
