added buttons and script file

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,49 +45,71 @@
         <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
+
                     <img src="../Portfolio/Assets/coaching.png" class="img-fluid" alt="Responsive image">            
                     <div class="card-img-overlay">
-                        <h5 class="card-title float text-center">Coaching</h5>
+                        <h5 class="card-title float text-center">Quarantine & Chill</h5>
                     </div>
-                </div>    
+                </div>
+                <div class="col-sm-2 col-md-3">
+                    <br>
+                    <br>
+                    <button type="button" class="btn btn-primary">Page</button>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <button type="button" class="btn btn-secondary">Github</button>
+                </div>
+                
+
+
             </div>
         <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
+
                     <img src="../Portfolio/Assets/game.png" class="img-fluid" alt="Responsive image">            
                     <div class="card-img-overlay">
-                        <h5 class="card-title text-center">Gaming</h5>
+                        <h5 class="card-title text-center">Password Generator</h5>
                     </div>
                 </div>
+                <div class="col-sm-2 col-md-3">
+                    <br>
+                    <br>
+                    <button type="button" class="btn btn-primary">Page</button>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <button type="button" class="btn btn-secondary">Github</button>
+                </div>
+
             </div>
         <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
+
                     <img src="../Portfolio/Assets/download.png" class="img-fluid" alt="Responsive image">            
                     <div class="card-img-overlay">
-                        <h5 class="card-title text-center">Development</h5>
+                        <h5 class="card-title text-center">Weather Dashboard</h5>
                     </div>
                 </div>
-            </div>
-        <br>
-            <div class="row">
                 <div class="col-sm-2 col-md-3">
-                    <img src="../Portfolio/Assets/music.png" class="img-fluid" alt="Responsive image">            
-                    <div class="card-img-overlay">
-                        <h5 class="card-title text-center">Music</h5>
-                    </div>
+                    <br>
+                    <br>
+                    <button type="button" class="btn btn-primary">Page</button>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <button type="button" class="btn btn-secondary">Github</button>
                 </div>
+
             </div>
         <br>
-            <div class="row">
-                <div class="col-sm-2 col-md-3">
-                    <img src="../Portfolio/Assets/smile.png" class="img-fluid" alt="Responsive image">            
-                    <div class="card-img-overlay">
-                        <h5 class="card-title text-center">Surprise</h5>
-                    </div>
-                </div>
-            </div>
-        <br>
+
+
         </div>
     </section>
 
