--- a/portfolio.html
+++ b/portfolio.html
@@ -45,21 +45,16 @@
         <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
-
                     <img src="../Portfolio/Assets/coaching.png" class="img-fluid" alt="Responsive image">            
-                    <div class="card-img-overlay">
-                        <h5 class="card-title float text-center">Quarantine & Chill</h5>
-                    </div>
                 </div>
-                <div class="col-sm-2 col-md-3">
+                <div class="col-sm-4 col-md-6">
+                    <h1>Quarantine & Chill</h1> 
                     <br>
                     <br>
-                    <button type="button" class="btn btn-primary">Page</button>
+                    <button type="button" class="btn btn-primary" id="qcPage">Page</button>
                     <br>
                     <br>
-                    <br>
-                    <br>
-                    <button type="button" class="btn btn-secondary">Github</button>
+                    <button type="button" class="btn btn-secondary" id="qcGit">Github</button>
                 </div>
                 
 
@@ -68,42 +63,32 @@
         <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
-
                     <img src="../Portfolio/Assets/game.png" class="img-fluid" alt="Responsive image">            
-                    <div class="card-img-overlay">
-                        <h5 class="card-title text-center">Password Generator</h5>
-                    </div>
                 </div>
-                <div class="col-sm-2 col-md-3">
+                <div class="col-sm-2 col-md-6">
+                    <h1>Password Generator</h1>
                     <br>
                     <br>
-                    <button type="button" class="btn btn-primary">Page</button>
+                    <button type="button" class="btn btn-primary" id="passPage">Page</button>
                     <br>
                     <br>
-                    <br>
-                    <br>
-                    <button type="button" class="btn btn-secondary">Github</button>
+                    <button type="button" class="btn btn-secondary" id="passGit">Github</button>
                 </div>
 
             </div>
         <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
-
                     <img src="../Portfolio/Assets/download.png" class="img-fluid" alt="Responsive image">            
-                    <div class="card-img-overlay">
-                        <h5 class="card-title text-center">Weather Dashboard</h5>
-                    </div>
                 </div>
-                <div class="col-sm-2 col-md-3">
+                <div class="col-sm-2 col-md-6">
+                    <h1>Weather Dashboard</h1>
                     <br>
                     <br>
-                    <button type="button" class="btn btn-primary">Page</button>
+                    <button type="button" class="btn btn-primary" id="weatherPage">Page</button>
                     <br>
                     <br>
-                    <br>
-                    <br>
-                    <button type="button" class="btn btn-secondary">Github</button>
+                    <button type="button" class="btn btn-secondary" id="weatherGit">Github</button>
                 </div>
 
             </div>
