Added script buttons

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,9 +45,9 @@
         <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
-                    <img src="../Portfolio/Assets/coaching.png" class="img-fluid" alt="Responsive image">            
+                    <img src="../Portfolio/Assets/quarantine.png" class="img-fluid" alt="Responsive image">            
                 </div>
-                <div class="col-sm-4 col-md-6">
+                <div class="col-sm-4 col-md-4">
                     <h1>Quarantine & Chill</h1> 
                     <br>
                     <br>
@@ -56,16 +56,16 @@
                     <br>
                     <button type="button" class="btn btn-secondary" id="qcGit">Github</button>
                 </div>
-                
 
 
             </div>
         <br>
+        <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
-                    <img src="../Portfolio/Assets/game.png" class="img-fluid" alt="Responsive image">            
+                    <img src="../Portfolio/Assets/password-icon.png" class="img-fluid" alt="Responsive image">            
                 </div>
-                <div class="col-sm-2 col-md-6">
+                <div class="col-sm-2 col-md-4">
                     <h1>Password Generator</h1>
                     <br>
                     <br>
@@ -77,11 +77,12 @@
 
             </div>
         <br>
+        <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
-                    <img src="../Portfolio/Assets/download.png" class="img-fluid" alt="Responsive image">            
+                    <img src="../Portfolio/Assets/Weather-icon.png" class="img-fluid" alt="Responsive image">            
                 </div>
-                <div class="col-sm-2 col-md-6">
+                <div class="col-sm-2 col-md-4">
                     <h1>Weather Dashboard</h1>
                     <br>
                     <br>
@@ -108,5 +109,6 @@
         </div>
     </footer>
 
+    <script src="script.js"></script>
 </body>
 </html>
