updates to files

--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,12 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.linkedin.com/in/evan-chu-286bb7107/">LinkedIn</a>
+          </li>
+         <li class="nav-item">
+            <a class="nav-link" href="https://docs.google.com/document/d/1zmOwyeccwzDwMh1j2IJJudXc_1f18FtyKXfURwcnaNQ/edit?usp=sharing">Resume</a>
+          </li>
         </ul>
       </div>
     </nav>
