--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.linkedin.com/in/evan-chu-286bb7107/">LinkedIn</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://docs.google.com/document/d/1zmOwyeccwzDwMh1j2IJJudXc_1f18FtyKXfURwcnaNQ/edit?usp=sharing">Resume</a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -91,10 +97,88 @@
                     <br>
                     <button type="button" class="btn btn-secondary" id="weatherGit">Github</button>
                 </div>
-
             </div>
         <br>
-
+        <br>
+        <div class="row">
+            <div class="col-sm-2 col-md-3">
+                <img src="" class="img-fluid" alt="Responsive image">            
+            </div>
+            <div class="col-sm-2 col-md-4">
+                <h1></h1>
+                <br>
+                <br>
+                <button type="button" class="btn btn-primary" id="">Page</button>
+                <br>
+                <br>
+                <button type="button" class="btn btn-secondary" id="">Github</button>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-sm-2 col-md-3">
+                <img src="" class="img-fluid" alt="Responsive image">            
+            </div>
+            <div class="col-sm-2 col-md-4">
+                <h1></h1>
+                <br>
+                <br>
+                <button type="button" class="btn btn-primary" id="">Page</button>
+                <br>
+                <br>
+                <button type="button" class="btn btn-secondary" id="">Github</button>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-sm-2 col-md-3">
+                <img src="" class="img-fluid" alt="Responsive image">            
+            </div>
+            <div class="col-sm-2 col-md-4">
+                <h1></h1>
+                <br>
+                <br>
+                <button type="button" class="btn btn-primary" id="">Page</button>
+                <br>
+                <br>
+                <button type="button" class="btn btn-secondary" id="">Github</button>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-sm-2 col-md-3">
+                <img src="" class="img-fluid" alt="Responsive image">            
+            </div>
+            <div class="col-sm-2 col-md-4">
+                <h1></h1>
+                <br>
+                <br>
+                <button type="button" class="btn btn-primary" id="">Page</button>
+                <br>
+                <br>
+                <button type="button" class="btn btn-secondary" id="">Github</button>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-sm-2 col-md-3">
+                <img src="" class="img-fluid" alt="Responsive image">            
+            </div>
+            <div class="col-sm-2 col-md-4">
+                <h1></h1>
+                <br>
+                <br>
+                <button type="button" class="btn btn-primary" id="">Page</button>
+                <br>
+                <br>
+                <button type="button" class="btn btn-secondary" id="">Github</button>
+            </div>
+        </div>
+        <br>
 
         </div>
     </section>
