adding buttons and functions

--- a/portfolio.html
+++ b/portfolio.html
@@ -100,82 +100,50 @@
             </div>
         <br>
         <br>
-        <div class="row">
-            <div class="col-sm-2 col-md-3">
-                <img src="" class="img-fluid" alt="Responsive image">            
+            <div class="row">
+                <div class="col-sm-2 col-md-3">
+                    <img src="" class="img-fluid" alt="Responsive image">            
+                </div>
+                <div class="col-sm-2 col-md-4">
+                    <h1>The Dad-A-Base</h1>
+                    <br>
+                    <br>
+                    <button type="button" class="btn btn-primary" id="dadPage">Page</button>
+                    <br>
+                    <br>
+                    <button type="button" class="btn btn-secondary" id="dadGit">Github</button>
+                </div>
+            </div>
+        <br>
+        <br>
+            <div class="row">
+                <div class="col-sm-2 col-md-3">
+                    <img src="" class="img-fluid" alt="Responsive image">            
+                </div>
+                <div class="col-sm-2 col-md-4">
+                    <h1>Employee Tracker</h1>
+                    <br>
+                    <br>
+                    <button type="button" class="btn btn-primary" id="trackerPage">Page</button>
+                    <br>
+                    <br>
+                    <button type="button" class="btn btn-secondary" id="trackerGit">Github</button>
+                </div>
+            </div>
+        <br>
+        <br>
+            <div class="row">
+                <div class="col-sm-2 col-md-3">
+                    <img src="" class="img-fluid" alt="Responsive image">            
             </div>
             <div class="col-sm-2 col-md-4">
-                <h1></h1>
+                <h1>Burger Plz</h1>
                 <br>
                 <br>
-                <button type="button" class="btn btn-primary" id="">Page</button>
+                <button type="button" class="btn btn-primary" id="burgerPage">Page</button>
                 <br>
                 <br>
-                <button type="button" class="btn btn-secondary" id="">Github</button>
-            </div>
-        </div>
-        <br>
-        <br>
-        <div class="row">
-            <div class="col-sm-2 col-md-3">
-                <img src="" class="img-fluid" alt="Responsive image">            
-            </div>
-            <div class="col-sm-2 col-md-4">
-                <h1></h1>
-                <br>
-                <br>
-                <button type="button" class="btn btn-primary" id="">Page</button>
-                <br>
-                <br>
-                <button type="button" class="btn btn-secondary" id="">Github</button>
-            </div>
-        </div>
-        <br>
-        <br>
-        <div class="row">
-            <div class="col-sm-2 col-md-3">
-                <img src="" class="img-fluid" alt="Responsive image">            
-            </div>
-            <div class="col-sm-2 col-md-4">
-                <h1></h1>
-                <br>
-                <br>
-                <button type="button" class="btn btn-primary" id="">Page</button>
-                <br>
-                <br>
-                <button type="button" class="btn btn-secondary" id="">Github</button>
-            </div>
-        </div>
-        <br>
-        <br>
-        <div class="row">
-            <div class="col-sm-2 col-md-3">
-                <img src="" class="img-fluid" alt="Responsive image">            
-            </div>
-            <div class="col-sm-2 col-md-4">
-                <h1></h1>
-                <br>
-                <br>
-                <button type="button" class="btn btn-primary" id="">Page</button>
-                <br>
-                <br>
-                <button type="button" class="btn btn-secondary" id="">Github</button>
-            </div>
-        </div>
-        <br>
-        <br>
-        <div class="row">
-            <div class="col-sm-2 col-md-3">
-                <img src="" class="img-fluid" alt="Responsive image">            
-            </div>
-            <div class="col-sm-2 col-md-4">
-                <h1></h1>
-                <br>
-                <br>
-                <button type="button" class="btn btn-primary" id="">Page</button>
-                <br>
-                <br>
-                <button type="button" class="btn btn-secondary" id="">Github</button>
+                <button type="button" class="btn btn-secondary" id="burgerGit">Github</button>
             </div>
         </div>
         <br>
