--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evan Chu - Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    
 </head>
 
 <body>
@@ -102,7 +101,7 @@
         <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
-                    <img src="" class="img-fluid" alt="Responsive image">            
+                    <img src="Assets/dad.png" class="img-fluid" alt="Responsive image">            
                 </div>
                 <div class="col-sm-2 col-md-4">
                     <h1>The Dad-A-Base</h1>
@@ -118,7 +117,7 @@
         <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
-                    <img src="" class="img-fluid" alt="Responsive image">            
+                    <img src="Assets/tracker.jpg" class="img-fluid" alt="Responsive image">            
                 </div>
                 <div class="col-sm-2 col-md-4">
                     <h1>Employee Tracker</h1>
@@ -134,20 +133,19 @@
         <br>
             <div class="row">
                 <div class="col-sm-2 col-md-3">
-                    <img src="" class="img-fluid" alt="Responsive image">            
+                    <img src="Assets/burger.jpg" class="img-fluid" alt="Responsive image">            
+                </div>
+                <div class="col-sm-2 col-md-4">
+                    <h1>Burger Plz</h1>
+                    <br>
+                    <br>
+                    <button type="button" class="btn btn-primary" id="burgerPage">Page</button>
+                    <br>
+                    <br>
+                    <button type="button" class="btn btn-secondary" id="burgerGit">Github</button>
+                </div>
             </div>
-            <div class="col-sm-2 col-md-4">
-                <h1>Burger Plz</h1>
-                <br>
-                <br>
-                <button type="button" class="btn btn-primary" id="burgerPage">Page</button>
-                <br>
-                <br>
-                <button type="button" class="btn btn-secondary" id="burgerGit">Github</button>
-            </div>
-        </div>
         <br>
-
         </div>
     </section>
 
